networkpolicies/allow-ingress-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-database
  namespace: networkdemo
spec:
  podSelector:
    matchLabels:
      app: mysql 
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            app: phpapp
