networkpolicies/deny-ingress-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-db
  namespace: networkdemo
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
